--- a/client/src/styles/toolbar.scss
+++ b/client/src/styles/toolbar.scss
@@ -71,8 +71,8 @@ $bkgColor1: #12EE1B;
 }
 
 .btn-exit {
-    background-color: #ccc;
-    color: gray;
+    background-color: var(--secondary-background-color);
+    color: var(--primary-text-color);
     font-weight: 900;
     font-size: 4vh;
     border: none;
@@ -122,7 +122,7 @@ input:checked + .slider:before {
 }
 
 #drawer-title {
-    font-size: 2vh;
+    font-size: 2.5vh;
     font-weight: bold;
 }
 
@@ -175,7 +175,7 @@ input:checked + .slider:before {
 
 @media only screen and (min-width: 750px) {    
     #drawer-title {
-        font-size: 1.5vw;
+        font-size: 1.1vw;
         font-weight: bold;
     }
     [data-theme="dark"] #toolbar-container, [data-theme="light"] #toolbar-container {
@@ -227,7 +227,7 @@ input:checked + .slider:before {
         color: var(--primary-text-color);
     }
     #drawer-title {
-        font-size: 2vh;
+        font-size: 1.2vw;
         font-weight: bold;
     }
     
@@ -258,7 +258,7 @@ input:checked + .slider:before {
 
 @media only screen and (min-width: 1500px) {    
     #drawer-title {
-        font-size: 1.5vw;
+        font-size: 1vw;
         font-weight: bold;
     }
     [data-theme="dark"] #toolbar-container, [data-theme="light"] #toolbar-container {
@@ -310,7 +310,7 @@ input:checked + .slider:before {
         color: var(--primary-text-color);
     }
     #drawer-title {
-        font-size: 2vh;
+        font-size: 1.1vw;
         font-weight: bold;
     }
     
@@ -338,3 +338,8 @@ input:checked + .slider:before {
     }
 }
 
+[data-theme=dark] #email-text, [data-theme="light"] #email-text {
+    background-color: var(--secondary-background-color);
+    color: var(--primary-text-color);
+    
+}
